[package]
name = "client"
version = "0.1.0"
edition = "2021"

default-run = "mysti-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = "1.0.75"
clipboard-master = "3.1.3"
arboard = "3.3.0"
image = "0.24.7"


[[bin]]
name = "mysti-client"
path = "src/main.rs"

