[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
image = "0.24.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio-tungstenite = "0.21.0"
warp = "0.3.6"
