[package]
name = "client"
version = "0.1.0"
edition = "2021"

default-run = "mysti-daemon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = "1.0.75"
clipboard-master = "3.1.3"
arboard = "3.3.0"
image = "0.24.7"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
tokio = {version = "1.34.0", features = ["full"]}
futures-util = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
log = "0.4.20"
fern = "0.6.2"
sys-info = "0.9.1"

#[cfg(target_os = "windows")]
winapi = { version = "0.3", features = ["winuser"] }

[[bin]]
name = "mysti-daemon"
path = "src/main.rs"

