[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
anyhow = "1.0.75"
common = { path = "../common" }
futures-util = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
tokio = "1.34.0"
tokio-tungstenite = "0.20.1"
warp = "0.3.6"

[[bin]]
name = "mysti-server"
path = "src/main.rs"
