[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
common = { path = "../common" }
futures-util = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
warp = "0.3.6"

[[bin]]
name = "mysti-server"
path = "src/main.rs"
